fix colors in language selector and teaser spacing

--- a/frontend/packages/volto-light-theme/src/theme/_bgcolor-blocks-layout.scss
+++ b/frontend/packages/volto-light-theme/src/theme/_bgcolor-blocks-layout.scss
@@ -1277,6 +1277,9 @@
             color: var(--header-foreground);
           }
         }
+        .language-selector a {
+          color: var(--header-foreground);
+        }
       }
 
       // Navigation
